Fix author name from ``Yuvan'' to ``Yuval''

--- a/_posts/2018-04-09-dagan18a.md
+++ b/_posts/2018-04-09-dagan18a.md
@@ -21,7 +21,7 @@ page: 268-320
 order: 268
 cycles: false
 author:
-- given: Yuvan
+- given: Yuval
   family: Dagan
 - given: Crammer
   family: Koby
