--- a/alt2018.bib
+++ b/alt2018.bib
@@ -246,8 +246,8 @@ standardisability does not; still explanatory learning can be achieved.}
 }
 
 
-@InProceedings{Gonem18,
-author    = {Gonem, Alon and Gilad-Bachrach, Ram},
+@InProceedings{Gilad-Bachrach18,
+author    = {Gilad-Bachrach, Ran, and Gonen, Alon},
 title     = {Smooth Sensitivity Based Approach for Differentially Private PCA},
 pages     = {438-450},
 abstract  = {We consider the challenge of differentially private PCA. 
